src/test/ui/issues/issue-49934-errors.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934-errors.rs:1:8
   |
LL | fn foo<#[derive(Debug)] T>() {
   |        ^^^^^^^^^^^^^^^^

error: expected an inert attribute, found a derive macro
  --> $DIR/issue-49934-errors.rs:1:17
   |
LL | fn foo<#[derive(Debug)] T>() {
   |                 ^^^^^

error: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934-errors.rs:5:9
   |
LL |         #[derive(Debug)]
   |         ^^^^^^^^^^^^^^^^

error: expected an inert attribute, found a derive macro
  --> $DIR/issue-49934-errors.rs:5:18
   |
LL |         #[derive(Debug)]
   |                  ^^^^^

error: aborting due to 4 previous errors

